# mythogenesis

./: .env.example  .gitignore  CLAUDE.md  FIELD_NOTES.md  README.md  SUBMISSION.md  app.py  config.py  handover.md  life_core.py  model_backend.py  pyproject.toml  render.py  requirements.txt  seed_patterns.py  semantics.py
.github/workflows/: ci.yml  deploy.yml
scripts/: deploy_to_space.py
static/: app.css
tests/: conftest.py  test_life_core.py  test_semantics.py  test_smoke.py  test_story.py
